feature(fix) : availableTimes -> TimeTable